--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             media="all"
             />
     <link rel="stylesheet" href="style.css" />
-    <link rel='shortcut icon' href='favicon_io/favicon.ico' type='image/x-icon'/ >
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
